# iCub_crawling

./: .gitignore  README.md
app/: crawling.xml
app/contexts/crawling/: crawling_managerConfig.ini  left_legConfig.ini
app/yarpmanager/: crawling-gazebo.xml  crawling.xml
gazebo_addin/icub_crawling/: icub_crawling.sdf  model.config
modules/crawlGUI/crawlingManagerForGUI/: CMakeLists.txt  CrawlManagerModule.cpp  CrawlManagerModule.h
modules/crawlGUI/crawlingManagerForGUI/include/: crawlManagerService.h
modules/crawlGUI/crawling_GUI/: CMakeLists.txt  crawling_GUI.pro  demoCrawl.thrift  demoCrawl_thrift.cmake  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
modules/crawlGUI/crawling_GUI/src/: crawlManagerService.cpp
modules/crawlGenerator/: CMakeLists.txt  Cpgs.cpp  Cpgs.h  CrawlGeneratorModule.cpp  CrawlGeneratorModule.h  CrawlGeneratorThread.cpp  CrawlGeneratorThread.h  CrawlInvKin.h  main.cpp
modules/crawlManager/: CMakeLists.txt  CrawlManagerModule.cpp  CrawlManagerModule.h  main_crawlManager.cpp
modules/velocityControl/: CMakeLists.txt  velControlThread.cpp
